--- a/CSS Navigation Bar/Vertical Navbar/style.css
+++ b/CSS Navigation Bar/Vertical Navbar/style.css
@@ -1,14 +1,21 @@
+body {
+  margin: 0;
+}
+
 ul {
   list-style: none;
   margin: 0;
   padding: 0;
-  background: #ddd;
-  width: 200px;
-  border: 1px solid #555;
+  width: 25%;
+  background: #f1f1f1;
+  /* border: 1px solid #555; */
+  position: fixed;
+  height: 100%;
+  overflow: auto;
 }
 
 li {
-  border-bottom: 1px solid #555;
+  /* border-bottom: 1px solid #555; */
 }
 
 li:last-child {
