--- a/CSS Navigation Bar/Vertical Navbar/style.css
+++ b/CSS Navigation Bar/Vertical Navbar/style.css
@@ -1,41 +1,47 @@
 body {
+  font-size: 28px;
   margin: 0;
+  padding: 0;
 }
 
 ul {
-  list-style: none;
+  list-style-type: none;
   margin: 0;
   padding: 0;
-  width: 25%;
-  background: #f1f1f1;
-  /* border: 1px solid #555; */
-  position: fixed;
-  height: 100%;
-  overflow: auto;
+  background-color: #333;
+  overflow: hidden;
+  position: sticky;
+  top: 0;
 }
 
 li {
-  /* border-bottom: 1px solid #555; */
+  float: left;
 }
 
-li:last-child {
-  border-bottom: none;
+li.right {
+  float: right;
 }
 
 li a {
-  display: block;
-  padding: 8px 16px;
   text-decoration: none;
-  color: #000;
+  display: block;
+  padding: 16px 32px;
+  color: #fff;
   text-align: center;
 }
 
 li a.active {
-  background: #04aa6d;
-  color: #fff;
+  background: #f14444;
 }
 
-li a:hover:not(.active) {
-  background: #555;
-  color: #fff;
+li a:hover {
+  background: #ddd;
+  color: #333;
+}
+
+@media screen and (max-width: 600px) {
+  li,
+  li.right {
+    float: none;
+  }
 }
