--- a/CSS Navigation Bar/Vertical Navbar/style.css
+++ b/CSS Navigation Bar/Vertical Navbar/style.css
@@ -1,3 +1,5 @@
+/* Responsive Top Nav */
+/* 
 body {
   font-size: 28px;
   margin: 0;
@@ -43,5 +45,75 @@ li a:hover {
   li,
   li.right {
     float: none;
+  }
+} */
+
+/* Responsive Side Nav */
+
+body {
+  margin: 0;
+}
+
+/* * {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+} */
+
+ul.sidenav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: auto;
+  background: #f1f1f1;
+  width: 25%;
+  height: 100%;
+  position: fixed;
+}
+
+ul.sidenav li a {
+  text-decoration: none;
+  display: block;
+  padding: 16px 32px;
+  color: #000;
+}
+
+ul.sidenav li a.active {
+  background: #4caf50;
+  color: white;
+}
+
+ul.sidenav li a:hover:not(.active) {
+  background: #555;
+  color: #fff;
+}
+
+div.content {
+  margin-left: 25%;
+  padding: 1px 16px;
+  height: 1000px;
+}
+
+@media screen and (max-width: 900px) {
+  ul.sidenav {
+    width: 100%;
+    height: auto;
+    position: relative;
+  }
+
+  ul.sidenav li a {
+    float: left;
+    padding: 15px;
+  }
+
+  div.content {
+    margin: 0;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  ul.sidenav li a {
+    float: none;
+    text-align: center;
   }
 }
