--- a/CSS Navigation Bar/Vertical Navbar/style.css
+++ b/CSS Navigation Bar/Vertical Navbar/style.css
@@ -52,6 +52,7 @@ li a:hover {
 
 body {
   margin: 0;
+  background: #fff;
 }
 
 /* * {
@@ -59,7 +60,7 @@ body {
   padding: 0;
   box-sizing: border-box;
 } */
-
+/* 
 ul.sidenav {
   list-style-type: none;
   margin: 0;
@@ -116,4 +117,59 @@ div.content {
     float: none;
     text-align: center;
   }
+} */
+
+/* Dropdown Nav Bar */
+
+ul {
+  background-color: #38444d;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  overflow: hidden;
+}
+
+ul li {
+  float: left;
+}
+
+li a {
+  display: inline-block;
+  text-decoration: none;
+  padding: 12px 18px;
+  color: #fff;
+  text-align: center;
+}
+
+li a:hover {
+  background: red;
+}
+
+.dropdown {
+  display: inline-block;
+}
+
+.dropdown__content {
+  display: none;
+  background: #f9f9f9;
+  position: absolute;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  min-width: 160px;
+  z-index: 1;
+}
+
+.dropdown__content a {
+  display: block;
+  color: #333;
+  padding: 12px 16px;
+  text-decoration: none;
+  text-align: left;
+}
+
+.dropdown__content a:hover {
+  background: #f1f1f1;
+}
+
+.dropdown:hover .dropdown__content {
+  display: block;
 }
