--- a/CSS Dropdown/style.css
+++ b/CSS Dropdown/style.css
@@ -2,7 +2,9 @@
   margin: 0;
 } */
 
-.dropdown {
+/* Basic Drop down */
+
+/* .dropdown {
   position: relative;
   display: inline-block;
 }
@@ -19,4 +21,50 @@
 
 .dropdown:hover .dropdown__content {
   display: block;
+} */
+
+/* Dropdown Menu */
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropbtn {
+  background-color: #4caf50;
+  color: #fff;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.dropdown__content {
+  position: absolute;
+  background-color: #f9f9f9;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  /* padding: 8px 16px; */
+  text-align: center;
+  min-width: 160px;
+  display: none;
+  z-index: 1;
+}
+
+.dropdown__content a {
+  display: block;
+  text-decoration: none;
+  padding: 12px 16px;
+  color: #000;
+}
+
+.dropdown__content a:hover {
+  background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown__content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #3e8e41;
 }
