--- a/CSS Dropdown/style.css
+++ b/CSS Dropdown/style.css
@@ -24,7 +24,7 @@
 } */
 
 /* Dropdown Menu */
-
+/* 
 .dropdown {
   position: relative;
   display: inline-block;
@@ -43,7 +43,6 @@
   position: absolute;
   background-color: #f9f9f9;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-  /* padding: 8px 16px; */
   text-align: center;
   min-width: 160px;
   display: none;
@@ -67,4 +66,61 @@
 
 .dropdown:hover .dropbtn {
   background-color: #3e8e41;
+} */
+
+/* Dropdown Navbar */
+
+ul {
+  list-style-type: none;
+  background-color: #333;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+li {
+  float: left;
+}
+
+li a,
+.dropbtn {
+  text-decoration: none;
+  padding: 14px 16px;
+  color: #fff;
+  text-align: center;
+  display: inline-block;
+}
+
+li a:hover,
+.dropdown:hover .dropbtn {
+  background-color: red;
+}
+
+.dropdown {
+  display: inline-block;
+}
+
+.dropdown__content {
+  display: none;
+  position: absolute;
+  min-width: 160px;
+  background-color: #f9f9f9;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown__content a {
+  display: block;
+  text-decoration: none;
+  padding: 12px 16px;
+  color: #333;
+  text-align: left;
+}
+
+.dropdown__content a:hover {
+  background: #f1f1f1;
+}
+
+.dropdown:hover .dropdown__content {
+  display: block;
 }
