--- a/CSS Forms/style.css
+++ b/CSS Forms/style.css
@@ -16,9 +16,20 @@ select {
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
-  border: 1px solid #ccc;
+  border: 2px solid #ccc;
   border-radius: 4px;
   outline: none;
+}
+
+select {
+  box-shadow: inset 0 1px 3px #ddd;
+}
+
+input[name="search"] {
+  background-image: url(../icon/loupe.png);
+  background-position: 10px 10px;
+  background-repeat: no-repeat;
+  padding: 12px 20px 12px 40px;
 }
 
 input[type="text"]:focus {
