--- a/CSS Website Layout/style.css
+++ b/CSS Website Layout/style.css
@@ -1,11 +1,32 @@
-/* Header */
-
 body {
   margin: 0;
 }
+
+/* Header */
 
 .header {
   background-color: #f1f1f1;
   padding: 20px;
   text-align: center;
+}
+
+/* Navigation Bar */
+
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+}
+
+.topnav a {
+  display: block;
+  float: left;
+  padding: 14px 16px;
+  text-decoration: none;
+  text-align: center;
+  color: #f2f2f2;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: #000;
 }
