--- a/CSS Website Layout/style.css
+++ b/CSS Website Layout/style.css
@@ -1,3 +1,8 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+}
+
 body {
   margin: 0;
 }
@@ -29,4 +34,25 @@ body {
 .topnav a:hover {
   background-color: #ddd;
   color: #000;
+}
+
+/* Create three equal columns that floats next to each other */
+.col {
+  float: left;
+  width: 33.33%;
+  padding: 15px;
+}
+
+/* Clear floats after the columns */
+.row::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .col {
+    width: 100%;
+  }
 }
