Website layout basic structure

--- a/CSS Responsive Website Layout/style.css
+++ b/CSS Responsive Website Layout/style.css
@@ -12,10 +12,15 @@ body {
 
 /* Heading */
 
-.header {
+.header,
+.footer {
   padding: 30px;
   text-align: center;
   background-color: #fff;
+}
+
+.footer {
+  background-color: #ddd;
 }
 
 .header h1 {
