--- a/CSS Responsive Website Layout/style.css
+++ b/CSS Responsive Website Layout/style.css
@@ -1,4 +1,6 @@
-* {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
 }
 
@@ -46,14 +48,16 @@ body {
 .leftcolumn {
   float: left;
   width: 75%;
+  background-color: gold;
 }
 
 /* Right column */
 .rightcolumn {
   float: left;
   width: 25%;
-  background-color: #f1f1f1;
+  background-color: red;
   padding-left: 20px;
+  /* margin-left: 20px; */
 }
 
 /* Fake image */
